--- a/main.html
+++ b/main.html
@@ -1,92 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuclear Energy Outline</title>
-    <style>
-        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 40px; background-color: #f9f9f9; }
-        h1, h2, h3 { color: #2c3e50; }
-        table { width: 100%; border-collapse: collapse; margin: 20px 0; }
-        th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-        th { background-color: #f0f0f0; }
-        section { margin-bottom: 40px; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>The Case for Nuclear Energy</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 2rem;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+    h1 {
+      color: #2c3e50;
+    }
+    section {
+      margin-bottom: 1.5rem;
+    }
+  </style>
 </head>
 <body>
-    <h1>Nuclear Energy Argumentative Essay Outline</h1>
 
-    <section>
-        <h2>1. Topic Chosen</h2>
-        <p>The use of nuclear energy</p>
-    </section>
+  <h1>The Case for Nuclear Energy: Powering the Future Responsibly</h1>
 
-    <section>
-        <h2>2. Pro-Con Chart</h2>
-        <table>
-            <thead>
-                <tr><th>Pro Information</th><th>Con Information</th></tr>
-            </thead>
-            <tbody>
-                <tr><td>Nuclear energy is a low-carbon energy source that helps fight climate change.</td>
-                    <td>Nuclear waste is hazardous and difficult to store safely.</td></tr>
-                <tr><td>It is highly efficient and can produce large amounts of electricity continuously.</td>
-                    <td>Nuclear accidents like Chernobyl or Fukushima can be catastrophic.</td></tr>
-            </tbody>
-        </table>
-    </section>
+  <section>
+    <p>
+      Imagine a future where the air is clean, cities are powered sustainably, and carbon emissions are a thing of the past. As the world faces the growing threat of climate change and the environmental damage caused by fossil fuels, the need for alternative energy sources becomes increasingly urgent. Among these alternatives, nuclear energy stands out. <strong>Nuclear energy should be used as a primary energy source because it is efficient, sustainable, and helps reduce carbon emissions.</strong>
+    </p>
+  </section>
 
-    <section>
-        <h2>3. Thesis Statement</h2>
-        <p>Nuclear energy should be used as a primary energy source because it is efficient, sustainable, and helps reduce carbon emissions.</p>
-    </section>
+  <section>
+    <h2>Efficiency of Nuclear Energy</h2>
+    <p>
+      To begin with, nuclear energy is one of the most efficient sources of electricity available today. Unlike renewable sources such as solar and wind, which depend on weather conditions and require vast land areas, nuclear power plants can produce large amounts of electricity continuously. A single nuclear reactor can generate enough electricity to power hundreds of thousands of homes, operating non-stop for months at a time. This level of output makes nuclear energy a reliable base-load power source for any nation.
+    </p>
+  </section>
 
-    <section>
-        <h2>4. Outline</h2>
-        <h3>Title: The Case for Nuclear Energy: Powering the Future Responsibly</h3>
+  <section>
+    <h2>Environmental Benefits</h2>
+    <p>
+      Furthermore, nuclear energy is environmentally friendly and significantly reduces greenhouse gas emissions. While coal and natural gas plants release tons of carbon dioxide into the atmosphere, nuclear power produces none during operation. According to the International Atomic Energy Agency (IAEA), nuclear energy plays a critical role in meeting the climate goals set by the Paris Agreement. By incorporating more nuclear power into the global energy mix, we can drastically cut down carbon emissions and help combat global warming.
+    </p>
+  </section>
 
-        <h4>I. Introduction</h4>
-        <ul>
-            <li><strong>Hook:</strong> Imagine a future where the air is clean, cities are powered sustainably, and carbon emissions are a thing of the past.</li>
-            <li><strong>Connecting information:</strong> With climate change becoming a growing threat and fossil fuels causing environmental damage, alternative energy sources are crucial. Among them, nuclear energy stands out.</li>
-            <li><strong>Thesis statement:</strong> Nuclear energy should be used as a primary energy source because it is efficient, sustainable, and helps reduce carbon emissions.</li>
-        </ul>
+  <section>
+    <h2>Addressing the Risks</h2>
+    <p>
+      Critics of nuclear energy often highlight the dangers of accidents and radioactive waste. While these concerns are valid, modern technology has made nuclear power much safer. Incidents like Chernobyl or Fukushima are rare, and strict regulations have been implemented worldwide to prevent such disasters. Additionally, nuclear waste can be securely stored and managed, with ongoing research exploring even safer disposal methods.
+    </p>
+  </section>
 
-        <h4>II. Body Paragraph 1</h4>
-        <ul>
-            <li><strong>Topic sentence:</strong> Nuclear energy is one of the most efficient sources of electricity.</li>
-            <li><strong>Supporting details:</strong> It produces significantly more energy than solar or wind per unit; nuclear power plants can operate continuously without interruption for months.</li>
-        </ul>
+  <section>
+    <h2>Conclusion</h2>
+    <p>
+      In conclusion, nuclear energy presents a realistic and responsible path forward. Its efficiency, low carbon footprint, and reliability make it an essential part of a sustainable energy future. As we work to address climate change and reduce our dependence on fossil fuels, nuclear energy deserves serious consideration and support.
+    </p>
+  </section>
 
-        <h4>III. Body Paragraph 2</h4>
-        <ul>
-            <li><strong>Topic sentence:</strong> Nuclear energy is environmentally friendly and reduces greenhouse gas emissions.</li>
-            <li><strong>Supporting details:</strong> Unlike coal or gas, nuclear power doesn’t emit carbon dioxide; it plays a crucial role in meeting global climate goals like those in the Paris Agreement.</li>
-        </ul>
-
-        <h4>IV. Body Paragraph 3</h4>
-        <ul>
-            <li><strong>Counterargument:</strong> Critics argue that nuclear energy is dangerous due to the risk of accidents and radioactive waste.</li>
-            <li><strong>Refutation:</strong> Modern technology has made nuclear power plants much safer. Waste can be securely stored, and incidents like Chernobyl are extremely rare today.</li>
-        </ul>
-
-        <h4>V. Conclusion</h4>
-        <p>Nuclear energy offers a realistic and responsible solution to global energy needs. With its high efficiency and low environmental impact, it deserves serious consideration as we transition toward a cleaner, more sustainable future.</p>
-    </section>
-
-    <section>
-        <h2>6. Sources</h2>
-        <h4>Pro Information</h4>
-        <ul>
-            <li>International Atomic Energy Agency – <a href="https://www.iaea.org" target="_blank">www.iaea.org</a></li>
-            <li>“Why We Still Need Nuclear Power” – Scientific American</li>
-        </ul>
-
-        <h4>Con Information</h4>
-        <ul>
-            <li>Greenpeace International – <a href="https://www.greenpeace.org" target="_blank">www.greenpeace.org</a></li>
-            <li>“The Dangers of Nuclear Energy” – The Guardian (opinion article)</li>
-        </ul>
-    </section>
 </body>
 </html>
