--- a/main.html
+++ b/main.html
@@ -1,62 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>The Case for Nuclear Energy</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 2rem;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-    h1 {
-      color: #2c3e50;
-    }
-    section {
-      margin-bottom: 1.5rem;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Infographic Outline</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: left;
+            vertical-align: top;
+        }
+        h2 {
+            text-align: center;
+        }
+        strong {
+            font-weight: bold;
+        }
+        ul {
+            margin-top: 0;
+            padding-left: 20px;
+        }
+    </style>
 </head>
 <body>
 
-  <h1>The Case for Nuclear Energy: Powering the Future Responsibly</h1>
-
-  <section>
-    <p>
-      Imagine a future where the air is clean, cities are powered sustainably, and carbon emissions are a thing of the past. As the world faces the growing threat of climate change and the environmental damage caused by fossil fuels, the need for alternative energy sources becomes increasingly urgent. Among these alternatives, nuclear energy stands out. <strong>Nuclear energy should be used as a primary energy source because it is efficient, sustainable, and helps reduce carbon emissions.</strong>
-    </p>
-  </section>
-
-  <section>
-    <h2>Efficiency of Nuclear Energy</h2>
-    <p>
-      To begin with, nuclear energy is one of the most efficient sources of electricity available today. Unlike renewable sources such as solar and wind, which depend on weather conditions and require vast land areas, nuclear power plants can produce large amounts of electricity continuously. A single nuclear reactor can generate enough electricity to power hundreds of thousands of homes, operating non-stop for months at a time. This level of output makes nuclear energy a reliable base-load power source for any nation.
-    </p>
-  </section>
-
-  <section>
-    <h2>Environmental Benefits</h2>
-    <p>
-      Furthermore, nuclear energy is environmentally friendly and significantly reduces greenhouse gas emissions. While coal and natural gas plants release tons of carbon dioxide into the atmosphere, nuclear power produces none during operation. According to the International Atomic Energy Agency (IAEA), nuclear energy plays a critical role in meeting the climate goals set by the Paris Agreement. By incorporating more nuclear power into the global energy mix, we can drastically cut down carbon emissions and help combat global warming.
-    </p>
-  </section>
-
-  <section>
-    <h2>Addressing the Risks</h2>
-    <p>
-      Critics of nuclear energy often highlight the dangers of accidents and radioactive waste. While these concerns are valid, modern technology has made nuclear power much safer. Incidents like Chernobyl or Fukushima are rare, and strict regulations have been implemented worldwide to prevent such disasters. Additionally, nuclear waste can be securely stored and managed, with ongoing research exploring even safer disposal methods.
-    </p>
-  </section>
-
-  <section>
-    <h2>Conclusion</h2>
-    <p>
-      In conclusion, nuclear energy presents a realistic and responsible path forward. Its efficiency, low carbon footprint, and reliability make it an essential part of a sustainable energy future. As we work to address climate change and reduce our dependence on fossil fuels, nuclear energy deserves serious consideration and support.
-    </p>
-  </section>
+    <h2>2. Recommend one person who you want to feature on our country's new 100,000-won banknote.</h2>
+    <table>
+        <tr>
+            <td style="width:20%;">
+                3<br><br>
+                Person of<br>Recommen-<br>dation on<br>the new<br>100,000-won<br>banknote
+            </td>
+            <td>
+                <strong>(mandatory) Who, achievement or contribution</strong><br>
+                Name: Kim Koo (金九)<br><br>
+                Major Achievements and Contributions:
+                <ul>
+                    <li>Served as the President of the Provisional Government of the Republic of Korea: He led the Provisional Government during the Japanese colonial period, overseeing independence movements both domestically and abroad, and dedicated himself to the liberation of Korea.</li>
+                    <li>Independence Activist: He was active in organizations such as the Sinminhoe and the Korean Patriot Corps, fighting for the nation's self-reliance and independence throughout his life.</li>
+                    <li>'Baekbeomilji' (My Wish): Through his writing 'My Wish' in his book 'Baekbeomilji,' he expressed his aspiration for a completely independent and culturally strong nation, deeply impressing many citizens.</li>
+                </ul>
+                <br>
+                <strong>(optional) any other information you think is relevant</strong><br>
+                <ul>
+                    <li>His pen name was Baekbeom (白凡), meaning that even ordinary people should have patriotism.</li>
+                    <li>He is recognized as a figure who significantly contributed to laying the foundation for the legitimacy and democracy of the Republic of Korea.</li>
+                    <li>He opposed the division of North and South Korea and advocated for the establishment of a unified nation-state.</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                4
+            </td>
+            <td>
+                <strong>(mandatory) What is the reason he/she should be featured on the new 100,000-won banknote and what will it tell us about our country?</strong><br><br>
+                (3~5 sentences)<br>
+                Kim Koo was a national leader who dedicated his life to the independence of his country by leading the Provisional Government of the Republic of Korea. Featuring his portrait on the 100,000-won banknote holds significant meaning in inheriting and honoring the historical legitimacy and independent spirit of the Republic of Korea. Furthermore, it can announce both domestically and internationally Korea's commitment to the self-reliant and culturally prosperous nation he dreamed of. This will inspire national pride and contribute to instilling a proper view of the state and historical consciousness in future generations.
+            </td>
+        </tr>
+    </table>
 
 </body>
 </html>
