--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Infographic Outline</title>
+    <title>Infographic Outlines</title>
     <style>
         table {
             border-collapse: collapse;
