--- a/a.html
+++ b/a.html
@@ -2,20 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Infographic Outlines</title>
+    <title>Infographic Outline: Currency Figures</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
         table {
             border-collapse: collapse;
             width: 100%;
+            margin-bottom: 30px;
         }
         th, td {
             border: 1px solid black;
-            padding: 8px;
+            padding: 10px;
             text-align: left;
             vertical-align: top;
         }
-        h2 {
-            text-align: center;
+        h1, h2 {
+            text-align: left;
         }
         strong {
             font-weight: bold;
@@ -24,14 +29,65 @@
             margin-top: 0;
             padding-left: 20px;
         }
+        .section-title {
+            font-size: 1.5em;
+            margin-top: 20px;
+            margin-bottom: 10px;
+        }
+        .table-label-col {
+            width: 25%; /* Adjusted for better visual balance */
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
 
-    <h2>2. Recommend one person who you want to feature on our country's new 100,000-won banknote.</h2>
+    <h1>Creating an Infographic: Outline</h1>
+
+    <div class="section-title">1. Introduce one person who is featured on one of the foreign countries' currencies.</div>
     <table>
         <tr>
-            <td style="width:20%;">
+            <td class="table-label-col">
+                Person on the<br>currency in a<br>foreign country
+            </td>
+            <td>
+                <strong>(mandatory) Country / Who, Coin or Banknote Value, Achievement or Contribution</strong><br>
+                Country: Poland<br>
+                Who: Maria Skłodowska-Curie<br>
+                Banknote Value: Former 20,000 złoty banknote (issued in 1989)<br><br>
+                Achievements or Contributions:
+                <ul>
+                    <li>Pioneering research on radioactivity.</li>
+                    <li>First woman to win a Nobel Prize (Physics, 1903).</li>
+                    <li>The only person to win Nobel Prizes in two different scientific fields (Physics, 1903; Chemistry, 1911).</li>
+                    <li>Discovered the elements polonium (named after her native Poland) and radium.</li>
+                    <li>Developed mobile X-ray units (Petites Curies) during World War I to aid wounded soldiers.</li>
+                </ul>
+                <br>
+                <strong>(optional) any other information you think is relevant</strong><br>
+                <ul>
+                    <li>She was the first female professor at the Sorbonne (University of Paris).</li>
+                    <li>Founded the Curie Institutes in Paris and Warsaw, which remain major centers of medical research.</li>
+                    <li>Her work laid the groundwork for nuclear medicine and cancer treatments.</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <td class="table-label-col">
+                Reason for<br>Featuring & <br>Reflection on<br>the Country
+            </td>
+            <td>
+                <strong>(mandatory) What is the reason he/she is put on the currency and what does it tell us about the country?</strong><br><br>
+                (3-5 sentences)<br>
+                Maria Skłodowska-Curie is featured on Polish currency as a profound tribute to one of the nation's most distinguished scientists and a global icon of scientific perseverance and brilliance. Her presence on the banknote signifies Poland's deep respect for groundbreaking scientific achievement, the pursuit of knowledge, and the pivotal role of women in science and society. It reflects a national pride in a figure who overcame significant societal and gender barriers to make monumental contributions to humanity. This choice highlights Poland's valuation of intellectual prowess and its desire to inspire future generations through her extraordinary legacy.
+            </td>
+        </tr>
+    </table>
+
+    <div class="section-title">2. Recommend one person who you want to feature on our country's (Korea's) new 100,000-won banknote.</div>
+    <table>
+        <tr>
+            <td class="table-label-col">
                 3<br><br>
                 Person of<br>Recommen-<br>dation on<br>the new<br>100,000-won<br>banknote
             </td>
@@ -54,12 +110,12 @@
             </td>
         </tr>
         <tr>
-            <td>
+            <td class="table-label-col">
                 4
             </td>
             <td>
                 <strong>(mandatory) What is the reason he/she should be featured on the new 100,000-won banknote and what will it tell us about our country?</strong><br><br>
-                (3~5 sentences)<br>
+                (3-5 sentences)<br>
                 Kim Koo was a national leader who dedicated his life to the independence of his country by leading the Provisional Government of the Republic of Korea. Featuring his portrait on the 100,000-won banknote holds significant meaning in inheriting and honoring the historical legitimacy and independent spirit of the Republic of Korea. Furthermore, it can announce both domestically and internationally Korea's commitment to the self-reliant and culturally prosperous nation he dreamed of. This will inspire national pride and contribute to instilling a proper view of the state and historical consciousness in future generations.
             </td>
         </tr>
